# ChangeLog for sci-biology/transdecoder
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Feb 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  transdecoder-20140704.ebuild:
  drop hmmer-3 dependency, it is an optional dependency only

  10 Jan 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  transdecoder-20140704.ebuild:
  install *.pm into PERL5LIB/TransDecoder and pass that via env.d

  09 Jan 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +files/TransDecoder.patch, +files/pfam_runner.pl.patch,
  transdecoder-20140704.ebuild:
  sci-biology/transdecoder: added patches so that we use PATH to loclate
  binaries and not in a local subdirectory named 'util', drop sys-
  cluster/openmpi requirement, it does not link against it all all, this is a
  bunch of perl and shell scripts

*transdecoder-20140704 (08 Jan 2015)

  08 Jan 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> +metadata.xml,
  +transdecoder-20140704.ebuild:
  sci-biology/transdecoder: new package