@@ -1,1 +1,2 @@
 DIST TransDecoder_r20140704.tar.gz 21189681 SHA256 fb53c9601c4ae9b3cd8e937f158ae3f15439115609bc7658effffa24af53517e SHA512 fa70e440c3f8b8d11da780858ff6433adf9065b126b29eb047983b17913e382c677a272881ee78be8e30867bbd447eb9bda71bd11abda5203d6a3abfb5316e90 WHIRLPOOL d603d06c8c1e84f3e721c0f5e43b2519766eaae1fc0456ece07ff43c13971706aecb24473813b7606ca885d2ef526648fc28f874200a53037b4aa6b291c4864d
+DIST transdecoder-2.0.1.tar.gz 9925281 SHA256 ce069da72c8a04e739f8c057af4f97187bf587d3f0d3db40465dfc2c89393e22 SHA512 fd12aeda089a12036e288e58eb0a3c3b9bb1f104f6821102d84ba6ddaec1a9dd32ec7937cd87129ff9814c7c8e26b6b98d27c6af8edd7ed6b5335c4878f649de WHIRLPOOL 61c6b7fe5684becdb28a3bccb113fea07889a2c4e6627e92cd27c1a90ca53f5a88504e048363a1322f1108dd6ebd5549c52aee9d438fbcfb2023390c79c126ec
