@@ -2,6 +2,14 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*transdecoder-2.0.1 (19 Mar 2015)
+
+  19 Mar 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
+  +transdecoder-2.0.1.ebuild, transdecoder-20140704.ebuild:
+  removing KEYWORDS until the perl files are installed to some other place. At
+  the moment I get: 'perl-module.eclass: Suspicious environment values found.
+  PERL5LIB="/usr/lib64/perl5/vendor_perl/5.18.2/TransDecoder"'
+
   15 Feb 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
   transdecoder-20140704.ebuild:
   drop hmmer-3 dependency, it is an optional dependency only
